--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
-.content {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+.alone {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
