--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,17 @@
-.alone {
+.centro {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: none;
 }
 
-.novo{
+.novo {
     position: fixed;
     bottom: 5%;
     right: 3%;
+  }
+
+  #contatos {
+    display: none;
   }
